# multichess

./: .gitignore  CMakeLists.txt  README.md  box2.cpp  box2.h  chess.cpp  chess.h  connection.cpp  connection.h  demos.h  main.cpp  scenes.h  specials.cpp  specials.h  sprites.cpp  uielements.cpp  uielements.h  window.cpp  window.h
chess/: chess.cpp  chess.h
connection/: connection.cpp  connection.h
main/: demos.h  main.cpp
pinboard/: pinboard.h
resources/: botdemo  chessform  demo1  shader0.frag  zoomdemo
specials/: Box2.cpp  Box2.h  specials.cpp  specials.h
ui/: AppManager.cpp  Window.cpp  Window.h  appmanager.cpp  formparser.cpp  formparser.h  sprites.cpp  uibasic.cpp  uibutton.cpp  uielements.h  uigroups.cpp  uitilemap.cpp  window.cpp
utils/: Box2.cpp  Box2.h  utils.cpp
